--- a/examples/imdb/index.html
+++ b/examples/imdb/index.html
@@ -16,22 +16,25 @@ body, #content {
 
 #content {
   overflow-y: auto;
-  width: 105vw;
+  width: 100vw;
+  height: 100vh;
 }
 
 .wall {
   line-height: 0;
+  width: 100vw;
+  height: auto;
 }
 
 .poster {
   position: relative;
   display: inline-block;
   width: 25vw;
-  height: 15vw;
+  height: 20vw;
   margin: 0;
   padding: 0;
   background-repeat: no-repeat;
-  background-position: center 80%;
+  background-position: center 0;
   background-size: 100% auto;
 }
 
