movies to come instead of past movies

--- a/examples/movies/index.html
+++ b/examples/movies/index.html
@@ -34,7 +34,7 @@ body, #content {
   margin: 0;
   padding: 0;
   background-repeat: no-repeat;
-  background-position: center 0;
+  background-position: center center;
   background-size: 100% auto;
 }
 
