infinite list with sensor

--- a/examples/movies/index.html
+++ b/examples/movies/index.html
@@ -21,6 +21,7 @@ body, #content {
 }
 
 .wall {
+  position: relative;
   line-height: 0;
   width: 100vw;
   height: auto;
@@ -51,6 +52,14 @@ body, #content {
 
 .poster:hover .overlay {
   opacity: 0;
+}
+
+.sensor {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100vh;
 }
 
   </style>
