--- a/examples/movies/index.html
+++ b/examples/movies/index.html
@@ -15,6 +15,11 @@ body, #content {
   overflow-x: hidden;
 }
 
+header {
+  width: 100%;
+  height: 48px;
+}
+
 #content {
   overflow-y: auto;
   width: 100vw;
